deploy/configapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-api-deployment
  labels:
    app: config-api
spec:
  selector:
    matchLabels:
      app: config-api
  template:
    metadata:
      labels:
        app: config-api
    spec:
      containers:
      - name: config-api
        image: davidbour/configapi
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
