deploy/configapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: config-api
  labels:
    service: config-api
spec:
  type: NodePort
  selector:
    app: config-api
  ports:
    - port: 8000
      targetPort: 8000
