deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello.world
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: config-api
                port:
                  number: 8000
